# mastodon-suspension-notifier

./: LICENSE  README.md  config.sample.toml  main.py  pyproject.toml
